--- a/index.Rmd
+++ b/index.Rmd
@@ -32,3 +32,12 @@ knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
 ), 'packages.bib')
 ```
+
+
+```{r}
+library(ggplot2)
+library(palmerpenguins)
+ggplot(data = penguins, aes(x = flipper_length_mm, y = body_mass_g)) +
+  geom_point()
+```
+
